Added a thread class, wraps around the boost:thread to give us some nicer functionality. also added statefulness to Heartbeat Sender

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Assignment1 VERSION 0.1.0)
 set(common_lib_name libcommon)
 set(common_SOURCES 
     src/common/HeartbeatSender.cpp
+    src/common/Thread.cpp
 )
 
 
