Created HeartbeatMessage object that is serializable; this is what is sent over the message_queue, currently just to the main thread but would be interprocess when that is all setup.

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -5,6 +5,7 @@ set(common_lib_name libcommon)
 set(common_SOURCES 
     src/common/HeartbeatSender.cpp
     src/common/Thread.cpp
+    src/common/HeartbeatMessage.cpp
 )
 
 
@@ -12,6 +13,7 @@ set(common_SOURCES
 set(Boost_CommonLibNeededLibs
     thread 
     chrono
+    serialization
 )
 
 # find boost libs for this specific project
