Added HeartbeatReceiver to keep track of heartbeatSenders

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -7,6 +7,7 @@ set(common_SOURCES
     src/common/HeartbeatSender.cpp
     src/common/Thread.cpp
     src/common/HeartbeatMessage.cpp
+    src/common/HeartbeatReceiver.cpp
 )
 
 
