Created SensorProcess, which acts as main for Sensor

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Boost 1.71.0 COMPONENTS  ${Boost_CommonLibNeededLibs})
 # install them
 if(Boost_FOUND)
     message(STATUS "BOOST libs for ${PROJECT_NAME}/${common_lib_name}  found!")
-    include_directories(${Boost_INLUDE_DIRS})
+    include_directories(${Boost_INCLUDE_DIRS})
     # Create common library
     add_library(${common_lib_name} 
                 STATIC 
@@ -42,18 +42,43 @@ target_include_directories(
     ${PROJECT_SOURCE_DIR}/include
 )
 
+set(sensor_process_exe_name sensorProcess)
+set(sensor_process_SOURCES
+    src/Sensor.cpp
+    src/SensorProcess.cpp
+)
+
+set(Boost_ProgramLibs
+    program_options
+)
+
+find_package(Boost 1.71.0 COMPONENTS ${Boost_ProgramLibs})
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    add_executable(${sensor_process_exe_name} ${sensor_process_SOURCES})
+    target_link_libraries(${sensor_process_exe_name}
+                          ${common_lib_name})   
+    target_link_libraries(${sensor_process_exe_name}
+                          ${Boost_LIBRARIES})
+endif()
+
+target_include_directories(
+    ${sensor_process_exe_name}
+    PRIVATE
+    ${PROJECT_SOURCE_DIR}/include
+)
+
 
 
 set(main_exe_name ${PROJECT_NAME})
 set(main_SOURCES
-    src/Sensor.cpp
     src/main.cpp
 )
 
-
 add_executable(${main_exe_name} ${main_SOURCES})
 target_link_libraries(${main_exe_name}
-                      ${common_lib_name} rt)
+                      ${common_lib_name})
 
 target_include_directories(
     ${main_exe_name}
