Initial bring up of sync message, sender, receiver. Nothing is integrated yet

--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_CXX_FLAGS, "-lrt")
 include_directories(${PROJECT_SOURCE_DIR}/../common/include)
 set(Assignment1_Libs
     libcore
-    libheartbeat)
+    libheartbeat
+    libsync)
 
 set(sensor_process_exe_name sensorProcess)
 set(sensor_process_SOURCES
