--- a/firstCmakeProject/CMakeLists.txt
+++ b/firstCmakeProject/CMakeLists.txt
@@ -24,7 +24,7 @@ find_package(Boost 1.71.0 COMPONENTS  ${Boost_NeededLibs})
 
 # install them
 if(Boost_FOUND)
-    message(STATUS "BOOST libs for ${PROJECT_NAME} found!")
+    # message(STATUS "BOOST libs for ${PROJECT_NAME} found!")
     include_directories(${Boost_INLUDE_DIRS})
     # Create starting program
     add_executable(${main_exe_name} ${main_SOURCES})
