Created another core class, a wrapper for boost::message_queue that will make it easier to use message queues. it is templated where the template is what the message will be, can be anything as long as the message has an operator>> (for us this is mostly friends of boost::serialize)

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -4,16 +4,31 @@ set(COMMON_INCLUDE_DIR ${CMAKE_CURRENT_LIST_DIR}/include)
 set(core_lib_name libcore)
 set(core_SOURCES
     src/core/Thread.cpp
+    # src/core/MessageQueue.cpp
     )
 
-include_directories(${Boost_INCLUDE_DIRS})
-# Create common library
-add_library(libcore 
-            STATIC 
-            ${core_SOURCES}
-            )
-# add boost libs to it
-target_link_libraries(libcore ${Boost_LIBRARIES} rt)
+
+set(Boost_CoreNeededLibs
+    chrono
+    serialization
+    )
+
+find_package(Boost 1.71.0 COMPONENTS  ${Boost_CoreNeededLibs})
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    # Create core library
+    add_library(libcore 
+                STATIC 
+                ${core_SOURCES}
+                )
+    # add boost libs to it
+    target_link_libraries(libcore 
+                          ${Boost_LIBRARIES} 
+                          rt)
+else()
+    message(SEND_ERROR "BOOST NOT FOUND!")
+endif()
 
 target_include_directories(
     libcore
