2 sync unit tests (need a full sequence one)

--- a/common/test/CMakeLists.txt
+++ b/common/test/CMakeLists.txt
@@ -6,3 +6,6 @@ include(BoostTestHelpers.cmake)
 
 add_boost_test(heartbeat/testHeartbeat.cpp
                libheartbeat)
+
+add_boost_test(sync/testSync.cpp
+               libsync)
