--- a/Assignment1/CMakeLists.txt
+++ b/Assignment1/CMakeLists.txt
@@ -5,8 +5,8 @@ project(Assignment1 VERSION 1.0.0)
 include_directories(${PROJECT_SOURCE_DIR}/../common/include)
 set(Assignment1_Libs
     libcore
-    libheartbeat
-    libsync)
+    libheartbeat)
+    
 
 set(sensor_process_exe_name sensorProcess)
 set(sensor_process_SOURCES
