add faulthandle to ass2, and also fix a build mistake that i introduced

--- a/Assignment2/CMakeLists.txt
+++ b/Assignment2/CMakeLists.txt
@@ -6,7 +6,8 @@ include_directories(${PROJECT_SOURCE_DIR}/../common/include)
 set(Assignment2_Libs
     libcore
     libheartbeat
-    libsync)
+    libsync
+    libfaulthandle)
 
 set(sensor_process_exe_name syncedSensorProcess)
 set(sensor_process_SOURCES
