Created 'FaultMonitor' in Assignment2 which just wraps up everything that was happening into a single class

--- a/Assignment2/CMakeLists.txt
+++ b/Assignment2/CMakeLists.txt
@@ -42,6 +42,7 @@ target_include_directories(
 
 set(main_exe_name ${PROJECT_NAME})
 set(main_SOURCES
+    src/FaultMonitor.cpp
     src/main.cpp
 )
 
