Small changes to get it to build; converted some of the 'base' classes to be pointers so that handling children #justworks

--- a/Assignment3/CMakeLists.txt
+++ b/Assignment3/CMakeLists.txt
@@ -7,6 +7,8 @@ set(Assignment3_Libs
 
 set(main_exe_name ${PROJECT_NAME})
 set(main_SOURCES
+    src/ThreadPool.cpp
+    src/WorkerThread.cpp
     src/main.cpp
 )
 
