Created a 'Fibonacci' Command to find the n-th digit of a fib sequence

--- a/Assignment3/CMakeLists.txt
+++ b/Assignment3/CMakeLists.txt
@@ -9,6 +9,7 @@ set(main_exe_name ${PROJECT_NAME})
 set(main_SOURCES
     src/ThreadPool.cpp
     src/WorkerThread.cpp
+    src/FibonacciCommand.cpp
     src/main.cpp
 )
 
