Initial creation of Assignment4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_subdirectory(firstCmakeProject)
 add_subdirectory(Assignment1)
 add_subdirectory(Assignment2)
 add_subdirectory(Assignment3)
+add_subdirectory(Assignment4)
 
 
 option(BUILD_DOC "Build Documentation" ON)
