CMake List for Assignment 4 to include Session Manager.

--- a/Assignment4/CMakeLists.txt
+++ b/Assignment4/CMakeLists.txt
@@ -5,6 +5,7 @@ include_directories(${PROJECT_SOURCE_DIR}/../common/include)
 set(main_exe_name ${PROJECT_NAME})
 set(main_SOURCES
     src/HelloApplication.cpp
+    src/SessionManager.cpp
     src/main.cpp
 )
 
